# IntellisenseProtobufRepro

./: CMakeLists.txt  CMakePresets.json
IntellisenseProtobuf/: CMakeLists.txt  IntellisenseProtobuf.cpp  IntellisenseProtobuf.h
src/: CMakeLists.txt
src/SubProject1/: CMakeLists.txt
src/SubProject1/SubProject1/: messageUser.cpp  messageUser.h
src/main/: CMakeLists.txt  main.cpp
src/messages/: CMakeLists.txt
src/messages/messages/: dummy1.proto  dummy2.proto
